--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               <h4 class="mb-2">Master of Fine Arts & Graphic Design</h4>
               <h5 class="py-1 px-2 mb-2">2015 - 2016</h5>
               <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p class="description"><span class="bullet">Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam
+              <p class="description"><span class="bullet">&bull; Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam
                   iusto autem sit...</span></p>
             </div>
       
@@ -233,7 +233,7 @@
               <h4 class="mb-2">Bachelor of Fine Arts & Graphic Design</h4>
               <h5 class="py-1 px-2 mb-2">2010 - 2014</h5>
               <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p class="description"><span class="bullet">Quia nobis sequi est occaecati aut. Repudiandae et iusto quae
+              <p class="description"><span class="bullet">&bull; Quia nobis sequi est occaecati aut. Repudiandae et iusto quae
                   reiciendis...</span></p>
             </div>
           </div>
@@ -244,22 +244,22 @@
               <h4 class="mb-2">Senior graphic design specialist</h4>
               <h5 class="py-1 px-2 mb-2">2019 - Present</h5>
               <p><em>Experion, New York, NY</em></p>
-              <p class="description"><span class="bullet">Lead in the design, development, and implementation of
+              <p class="description"><span class="bullet">&bull; Lead in the design, development, and implementation of
                   materials</span></p>
-              <p class="description"><span class="bullet">Delegate tasks to the 7 members of the design team</span></p>
-              <p class="description"><span class="bullet">Supervise the assessment of all graphic materials</span></p>
-              <p class="description"><span class="bullet">Oversee budgets ranging from $2,000 - $25,000</span></p>
+              <p class="description"><span class="bullet">&bull; Delegate tasks to the 7 members of the design team</span></p>
+              <p class="description"><span class="bullet">&bull; Supervise the assessment of all graphic materials</span></p>
+              <p class="description"><span class="bullet">&bull; Oversee budgets ranging from $2,000 - $25,000</span></p>
             </div>
       
             <div class="resume-item ps-4 position-relative">
               <h4 class="mb-2">Graphic design specialist</h4>
               <h5 class="py-1 px-2 mb-2">2017 - 2018</h5>
               <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <p class="description"><span class="bullet">Developed numerous marketing programs (logos, brochures,
+              <p class="description"><span class="bullet">&bull; Developed numerous marketing programs (logos, brochures,
                   infographics...)</span></p>
-              <p class="description"><span class="bullet">Managed up to 5 projects or tasks under pressure</span></p>
-              <p class="description"><span class="bullet">Recommended and consulted with clients</span></p>
-              <p class="description"><span class="bullet">Created 4+ design presentations and proposals per month</span></p>
+              <p class="description"><span class="bullet">&bull; Managed up to 5 projects or tasks under pressure</span></p>
+              <p class="description"><span class="bullet">&bull; Recommended and consulted with clients</span></p>
+              <p class="description"><span class="bullet">&bull; Created 4+ design presentations and proposals per month</span></p>
             </div>
           </div>
         </div>
