--- a/index.html
+++ b/index.html
@@ -118,18 +118,12 @@
             <div class="col-lg-7 content">
               <h3>Sasha Cheek is a systems integration specialist and freelance science writer, with a hunger to
                 demystify engineering and science through storytelling.</h3>
-              <div class="container neon-paragraph" data-aos="fade-up" data-aos-delay="100">
+              <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <p>Her career began with a systems engineering NASA internship, followed by recent technical liaison and
                   program management roles at Microsoft and Indeed. In addition to working full-time in technology,
                   Sasha is an M.A. candidate in Science Writing at Johns Hopkins University.</p>
                 <p>When Sasha is not debugging code and creating articles, she's dissecting the science behind her
                   favorite films and TV shows.</p>
-
-<!-- Neon bottom-left accents -->
-<span class="corner-bottom-left"></span>
-<span class="corner-bottom-left-vert"></span>
-
-</div><!-- /.neon-paragraph -->
           </div>
          </div>
     </section><!-- /About Section -->
@@ -140,8 +134,8 @@
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>The services I offer cover technical consulting, mentorship and guidance for individuals in engineering and
-          tech, integrations, and freelance science writing services.</p>
+        <p>The services I offer cover technical consulting, mentorship and guidance for<br> individuals in engineering and
+          tech, integrations, and<br> freelance science writing services.</p>
       </div><!-- End Section Title -->
 
       <div class="container justify-content-center">
