--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>The services I offer cover technical consulting, mentorship and guidance for<br> individuals in engineering and
-          tech, integrations, and<br> freelance science writing services.</p>
+        <p>I provide technical consulting, science and technology writing, and mentorship to help organizations communicate clearly, streamline integrations, and strengthen engineering practices.</p>
       </div><!-- End Section Title -->
 
       <div class="container justify-content-center">
@@ -147,10 +146,7 @@
             <div>
               <h4 class="title">Technical Consulting & Integrations</h4>
               <p class="description">
-                <span class="bullet">Improve existing technical documentation or create them to streamline information about API
-                architecture,
-                systems engineering, data feeds, and other similar topics.</span><br>
-                <span class="bullet">Offer services related to systems integrations projects and initiatives in a consultant role.</span>
+                <span class="bullet">&bull; Streamline API architecture, systems engineering, and data feeds through clear documentation and integration support.</span>
               </p>
             </div>
           </div>
@@ -162,10 +158,7 @@
             <div>
               <h4 class="title">Science & Technology Writing</h4>
               <p class="description">
-                <span class="bullet">Report on science and technical expertise in narrative form as a contributor, SME, and for freelance
-                writing.</span><br>
-                <span class="bullet">Write research-driven features related to science, technology, engineering, and other similar topics
-                for articles.</span>
+                <span class="bullet">&bull;Translate complex technical and scientific concepts into engaging, research-driven narratives.</span>
               </p>
             </div>
           </div>
@@ -177,9 +170,7 @@
             <div>
               <h4 class="title">Mentorship & Advisory</h4>
               <p class="description">
-                <span class="bullet">Coach on careers in technical integrations and systems engineering.</span><br>
-                <span class="bullet">>Review resumes, pitches, and technical skills.</span><br>
-                <span class="bullet">Guide colleagues and clients on APIs, feeds, and other data processes.</span>
+                <span class="bullet">&bull;Provide guidance on technical career paths,resume development, and integration best practices.</span>
               </p>
             </div>
           </div>
