--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>I provide technical consulting, science and technology writing, and mentorship to help organizations communicate clearly, streamline integrations, and strengthen engineering practices.</p>
+        <p>I provide technical consulting, science/technology<br> writing, and mentorship to help organizations communicate clearly,<br> streamline integrations, and strengthen engineering practices.</p>
       </div><!-- End Section Title -->
 
       <div class="container justify-content-center">
