--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>I provide technical consulting, science/technology writing,<br> and mentorship to help organizations communicate<br> clearly, streamline integrations, and strengthen engineering practices.</p>
+        <p>I provide technical consulting, science/technology writing,<br> and mentorship to help organizations communicate<br> clearly, streamline integrations,<br> and strengthen engineering practices.</p>
       </div><!-- End Section Title -->
 
       <div class="container justify-content-center">
@@ -262,7 +262,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Tech Portfolio</h2>
+        <h2>Tech<br>Portfolio</h2>
         <p>Applying engineering to real-world challenges, involving APIs and programming projects. More projects coming
           soon!</p>
       </div><!-- End Section Title -->
