scheek100-framed-subtitle-CustomCss-9.26.25

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>I provide technical consulting, science/technology writing, and mentorship to help organizations communicate clearly, streamline integrations, and strengthen engineering practices.</p>
+        <p class="framed-subtitle">I provide technical consulting, science/technology writing, and mentorship to help organizations communicate clearly, streamline integrations, and strengthen engineering practices.</p>
       </div><!-- End Section Title -->
 
       <div class="container justify-content-center">
@@ -184,7 +184,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Experience and technical expertise at a glance.</p>
+        <p class="framed-subtitle">Experience and technical expertise at a glance.</p>
       </div><!-- End Section Title -->
 
       <!-- Neon Framed Resume Body -->
@@ -257,7 +257,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Tech<br>Portfolio</h2>
-        <p>Applying engineering to real-world challenges, involving APIs and programming projects. More projects coming
+        <p class="framed-subtitle">Applying engineering to real-world challenges, involving APIs and programming projects. More projects coming
           soon!</p>
       </div><!-- End Section Title -->
 
@@ -376,7 +376,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Writing</h2>
-        <p>Recent published work on Medium — expand to preview each article.</p>
+        <p class="framed-subtitle">Recent published work on Medium — expand to preview each article.</p>
       </div>
 
       <!-- Neon Framed Blog Container -->
@@ -454,7 +454,7 @@
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
-        <p>Results recognized by former colleagues, coworkers, and clients.</p>
+        <p class="framed-subtitle">Results recognized by former colleagues, coworkers, and clients.</p>
       </div><!-- End Section Title -->
       <div data-aos="fade-up" data-aos-delay="100">
 
@@ -535,7 +535,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Have a question, need help with a project, or just talk about tech? I'm always happy to connect. Send me a
+        <p class="framed-subtitle">Have a question, need help with a project, or just talk about tech? I'm always happy to connect. Send me a
           message, and I will respond within 24-48 hours.</p>
       </div><!-- End Section Title -->
 
