--- a/index.html
+++ b/index.html
@@ -388,8 +388,8 @@
         <p class="framed-subtitle">Recent published work on Medium — expand to preview each article.</p>
       </div>
 
-      <!-- Neon Framed Blog Container -->
-      <div class="container neon-paragraph" data-aos="fade-up" data-aos-delay="100">
+      <!-- Blog Container -->
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="accordion" id="accordionBlog">
 
