--- a/index.html
+++ b/index.html
@@ -549,42 +549,42 @@
           message, and I will respond within 24-48 hours.</p>
       </div><!-- End Section Title -->
 
-      <!-- Neon Framed Contact Container -->
+      <!-- Contact Container -->
       <div class="container neon-paragraph" data-aos="fade-up" data-aos-delay="100">
 
-        <form action="forms/contact.php" method="post" class="php-email-form">
-          <div class="row gy-4">
+        <form action="https://formspree.io/f/xovlzkjj" method="POST" class="php-email-form">
+  <div class="row gy-4">
 
-            <div class="col-md-6">
-              <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-            </div>
+    <div class="col-md-6">
+      <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+    </div>
 
-            <div class="col-md-6">
-              <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-            </div>
+    <div class="col-md-6">
+      <input type="email" class="form-control" name="email" placeholder="Your Email" required>
+    </div>
 
-            <div class="col-md-12">
-              <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-            </div>
+    <div class="col-md-12">
+      <input type="text" class="form-control" name="subject" placeholder="Subject" required>
+    </div>
 
-            <div class="col-md-12">
-              <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-            </div>
+    <div class="col-md-12">
+      <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
+    </div>
 
-            <div class="col-md-12 text-center">
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your message has been sent. Thank you!</div>
+    <div class="col-md-12 text-center">
+      <div class="loading">Loading…</div>
+      <div class="error-message"></div>
+      <div class="sent-message">Your message has been sent. Thank you!</div>
 
-              <button type="submit">Send Message</button>
-            </div>
+      <button type="submit" class="cp-btn">Send Message</button>
+    </div>
 
-          </div>
-        </form>
+  </div>
+</form>
 
-        <!-- Neon bottom-left accents -->
-        <span class="corner-bottom-left"></span>
-        <span class="corner-bottom-left-vert"></span>
+<!-- Neon bottom-left accents -->
+<span class="corner-bottom-left"></span>
+<span class="corner-bottom-left-vert"></span>
       </div><!-- End neon-paragraph -->
     </section>
     <!-- End Contact Section -->
@@ -641,6 +641,48 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+
+<!-- Contact Section JS Script -->
+<script>
+  const form = document.querySelector('.php-email-form');
+  const loading = form.querySelector('.loading');
+  const errorMessage = form.querySelector('.error-message');
+  const sentMessage = form.querySelector('.sent-message');
+
+  form.addEventListener('submit', async function (e) {
+    e.preventDefault();
+    loading.style.display = 'block';
+    errorMessage.style.display = 'none';
+    sentMessage.style.display = 'none';
+
+    try {
+      const response = await fetch(form.action, {
+        method: 'POST',
+        body: new FormData(form),
+        headers: { 'Accept': 'application/json' }
+      });
+
+      loading.style.display = 'none';
+
+      if (response.ok) {
+        sentMessage.style.display = 'block';
+        form.reset();
+      } else {
+        const data = await response.json();
+        if (Object.hasOwn(data, 'errors')) {
+          errorMessage.textContent = data["errors"].map(err => err["message"]).join(", ");
+        } else {
+          errorMessage.textContent = "Oops! There was a problem submitting your form.";
+        }
+        errorMessage.style.display = 'block';
+      }
+    } catch (error) {
+      loading.style.display = 'none';
+      errorMessage.textContent = "Network error — please try again later.";
+      errorMessage.style.display = 'block';
+    }
+  });
+</script>
 
 </body>
 
