--- a/index.html
+++ b/index.html
@@ -550,9 +550,9 @@
       </div><!-- End Section Title -->
 
       <!-- Contact Container -->
-      <div class="container neon-paragraph" data-aos="fade-up" data-aos-delay="100">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <form action="https://formspree.io/f/xovlzkjj" method="POST" class="php-email-form">
+        <form action="https://formspree.io/f/xovlzkjj" method="POST" class="php-email-form" novalidate>
   <div class="row gy-4">
 
     <div class="col-md-6">
@@ -560,35 +560,27 @@
     </div>
 
     <div class="col-md-6">
-      <input type="email" class="form-control" name="email" placeholder="Your Email" required>
+      <input type="email" name="email" class="form-control" placeholder="Your Email" required>
     </div>
 
     <div class="col-md-12">
-      <input type="text" class="form-control" name="subject" placeholder="Subject" required>
+      <input type="text" name="subject" class="form-control" placeholder="Subject" required>
     </div>
 
     <div class="col-md-12">
-      <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
+      <textarea name="message" class="form-control" rows="6" placeholder="Message" required></textarea>
     </div>
 
+    <!-- Feedback messages -->
     <div class="col-md-12 text-center">
-      <div class="loading">Loading…</div>
-      <div class="error-message"></div>
-      <div class="sent-message">Your message has been sent. Thank you!</div>
-
-      <button type="submit" class="cp-btn">Send Message</button>
+      <div class="loading" style="display:none;">Loading</div>
+      <div class="error-message" style="display:none;"></div>
+      <div class="sent-message" style="display:none;">Your message has been sent. Thank you!</div>
+      <button type="submit">Send Message</button>
     </div>
 
   </div>
 </form>
-
-<!-- Neon bottom-left accents -->
-<span class="corner-bottom-left"></span>
-<span class="corner-bottom-left-vert"></span>
-      </div><!-- End neon-paragraph -->
-    </section>
-    <!-- End Contact Section -->
-
     </div>
 
     </section><!-- /Contact Section -->
@@ -669,8 +661,8 @@
         form.reset();
       } else {
         const data = await response.json();
-        if (Object.hasOwn(data, 'errors')) {
-          errorMessage.textContent = data["errors"].map(err => err["message"]).join(", ");
+        if (data.errors) {
+          errorMessage.textContent = data.errors.map(err => err.message).join(", ");
         } else {
           errorMessage.textContent = "Oops! There was a problem submitting your form.";
         }
