--- a/index.html
+++ b/index.html
@@ -555,22 +555,40 @@
  <div class="row justify-content-center">
       <div class="col-lg-6">
 
-        <!-- Neon Contact Form -->
-        <form id="contact-form" action="https://formspree.io/f/xovlzkjj" method="POST">
-          <input class="form-control mb-3" name="name" type="text" placeholder="Full Name" required />
-          <input class="form-control mb-3" name="email" type="email" placeholder="Email Address" required />
-          <input class="form-control mb-3" name="subject" type="text" placeholder="Subject" required />
-          <textarea class="form-control mb-3" name="message" placeholder="Message" style="height: 8rem" required></textarea>
-          
-          <!-- Status Messages -->
-          <div class="loading">Sending...</div>
-          <div class="error-message"></div>
-          <div class="sent-message">✅ Your message has been sent. Thank you!</div>
+<!-- Contact Form -->
+<form action="https://formspree.io/f/mldpgwjj" method="POST" class="contact-form">
+  <div class="row gy-4">
 
-          <div class="d-grid">
-            <button class="btn btn-neon btn-lg" type="submit">Send Message</button>
-          </div>
-        </form>
+    <!-- Name -->
+    <div class="col-md-6">
+      <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+    </div>
+
+    <!-- Email -->
+    <div class="col-md-6">
+      <input type="email" name="email" class="form-control" placeholder="Your Email" required>
+    </div>
+
+    <!-- Subject -->
+    <div class="col-md-12">
+      <input type="text" name="subject" class="form-control" placeholder="Subject" required>
+    </div>
+
+    <!-- Message -->
+    <div class="col-md-12">
+      <textarea name="message" class="form-control" rows="6" placeholder="Message" required></textarea>
+    </div>
+
+    <!-- Status Messages -->
+    <div class="col-md-12 text-center">
+      <div class="loading" style="display:none;">Loading...</div>
+      <div class="error-message" style="display:none; color:#ff4d4d;"></div>
+      <div class="sent-message" style="display:none; color:#39ff14;">Your message has been sent. Thank you!</div>
+      <button type="submit" class="btn btn-neon btn-lg">Send Message</button>
+    </div>
+
+  </div>
+</form>
 
       </div>
     </div>
