--- a/index.html
+++ b/index.html
@@ -187,72 +187,136 @@
         <p class="framed-subtitle">Experience and technical expertise at a glance.</p>
       </div><!-- End Section Title -->
 
-      <!-- Neon Framed Resume Body -->
+      <!-- SUMMARY -->
       <div class="container neon-paragraph" data-aos="fade-up" data-aos-delay="100">
         <div class="row">
           <div class="col-lg-6">
             <h3 class="my-3">Summary</h3>
             <div class="resume-item ps-4 position-relative">
-              <h4 class="mb-2">Alice Barkley</h4>
+              <h4 class="mb-2">Sasha Cheek</h4>
               <p class="mb-3">
                 <em>
-                  Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing
-                  user-centered digital/print marketing material from initial concept to final, polished deliverable.
+                  Systems integration engineer and freelance science writer with roots at NASA, bridging engineering
+                  expertise and clear
+                  communication. Seeking freelance writer opportunities to translate engineering concepts for general
+                  audiences.
                 </em>
-              </p>
-              <p class="description"><span class="bullet">&bull; Portland par 127, Orlando, FL</span></p>
+              </p><!--Additional info (email address, location, etc.)-->
+              <!--<p class="description"><span class="bullet">&bull; Portland par 127, Orlando, FL</span></p>
               <p class="description"><span class="bullet">&bull; +(123) 456-7891</span></p>
-              <p class="description"><span class="bullet">&bull; alice.barkley@example.com</span></p>
-            </div>
-
-            <h3 class="my-3">Education</h3>
+              <p class="description"><span class="bullet">&bull; alice.barkley@example.com</span></p> -->
+              <!--</div> -->
+              <!--EDUCATION-->
+              <!--<h3 class="my-3">Education</h3>
             <div class="resume-item ps-4 pb-4 position-relative">
-              <h4 class="mb-2">Master of Fine Arts & Graphic Design</h4>
-              <h5 class="py-1 px-2 mb-2">2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p class="description"><span class="bullet">&bull; Qui deserunt veniam. Et sed aliquam labore tempore sed
-                  quisquam
-                  iusto autem sit...</span></p>
-            </div>
+              <h4 class="mb-2">Master of Arts in Science Writing</h4>
+              <h5 class="py-1 px-2 mb-2">2025 - 2027</h5>
+              <p><em>Johns Hopkins University, Baltimore, MD (Remote)</em></p>
+              <p class="description"><span class="bullet">&bull; In progress (4.0 GPA)</span></p>
+            </div>-->
 
-            <div class="resume-item ps-4 position-relative">
-              <h4 class="mb-2">Bachelor of Fine Arts & Graphic Design</h4>
-              <h5 class="py-1 px-2 mb-2">2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <!--<div class="resume-item ps-4 position-relative">
+              <h4 class="mb-2">Bachelor of Science in Electronics Engineering Technology (ABET-Accredited)</h4>
+              <h5 class="py-1 px-2 mb-2">2015 - 2018</h5>
+              <p><em>North Carolina A&amp;T State University, Greensboro, NC</em></p>
               <p class="description"><span class="bullet">&bull; Quia nobis sequi est occaecati aut. Repudiandae et
                   iusto quae
-                  reiciendis...</span></p>
+                  reiciendis...</span></p> -->
+              <!--</div> -->
             </div>
-          </div>
+            <!--EXPERIENCE-->
+            <div class="col-lg-6">
+              <h3 class="my-3">Experience</h3>
+              <div class="resume-item ps-4 pb-4 position-relative">
+                <h4 class="mb-2">Technical Integrations Specialist</h4>
+                <h5 class="py-1 px-2 mb-2">2023 - Present</h5>
+                <p><em>Indeed.com, Research Triangle Park, NC (Remote)</em></p>
+                <p class="description"><span class="bullet">&bull; Manage Integraton Lifecycle Management (ILM) for high
+                    spending partners' integrations, including configuration, testing, deployment, monitoring, and
+                    version
+                    control</span></p>
+                <p class="description"><span class="bullet">&bull; Recognized as trusted subject matter expert (SME) on
+                    API and data feed integrations, advising cross-functional teams on best practices for scalable
+                    system
+                    architecture and design
+                    materials</span></p>
+                <p class="description"><span class="bullet">&bull; Led cross-functional investigation in July 2025 to
+                    mitigate 3rd party partner application programming interface (API) abuse patterns, and proposed
+                    a data pipeline solution to centralize and improve all company API observability</span></p>
+                <p class="description"><span class="bullet">&bull; Engineered and launched 20+ complex API and XML feed
+                    integrations from 2023 to the present day</span></p>
+              </div>
 
-          <div class="col-lg-6">
-            <h3 class="my-3">Professional Experience</h3>
+              <div class="resume-item ps-4 position-relative">
+                <h4 class="mb-2">Freelance Science Writer</h4>
+                <h5 class="py-1 px-2 mb-2">2024 - Present</h5>
+                <p><em>Independent, Research Triangle Park, NC</em></p>
+                <p class="description"><span class="bullet">&bull; Interviewed leading experts, including two particle
+                    physicists and the Harvard director of neurology, to produce
+                    authoritative science articles about cosmic radiation impact on astronauts and brain-computer
+                    interfaces (BCIs)
+                  </span></p>
+                <p class="description"><span class="bullet">&bull; Created a website using Bootstrap, JavaScript, HTML,
+                    CSS, and Git to advertise writing and technical portfolios of work</span>
+                </p>
+                <p class="description"><span class="bullet">&bull; Recommended and consulted with clients</span></p>
+                <p class="description"><span class="bullet">&bull; Conducted research using methods such as sourcing
+                    peer-reviewed scientific journals and media, interviewing SMEs,
+                    and fact-checking to ensure the validity of info before publishing stories</span></p>
+              </div>
+
+              <div class="resume-item ps-4 position-relative">
+                <h4 class="mb-2">Technical Program Manager</h4>
+                <h5 class="py-1 px-2 mb-2">2019 - 2022</h5>
+                <p><em>Various Projects, Research Triangle Park, NC (Remote) </em></p>
+                <p class="description"><span class="bullet">&bull; Led migration for 3500+ CDN (content delivery
+                    network)
+                    pages, and made Microsoft products more accessible
+                    to end-users for online orders using Akamai software</span></p>
+                <p class="description"><span class="bullet">&bull; Communicated technical CDN workflows to global
+                    stakeholders via automated dashboards (Power BI/Azure
+                    DevOps), reducing misalignment by 30%</span></p>
+                <p class="description"><span class="bullet">&bull; Onboarded the highest number of partner integrations
+                    during tenure while owning 7-8 concurrent projects,
+                    outperforming previous TPMs within the team</span></p>
+                <p class="description"><span class="bullet">&bull; Trained new program managers and engineers on the
+                    team
+                    for API integrations and processes</span></p>
+              </div>
+
+              <div class="resume-item ps-4 position-relative">
+                <h4 class="mb-2">Technical Business Analyst</h4>
+                <h5 class="py-1 px-2 mb-2">2019 - 2021</h5>
+                <p><em>Hudson MX, Atlanta, GA </em></p>
+                <p class="description"><span class="bullet">&bull; Led API gateway and credential management to
+                    streamline
+                    secure partner integrations while shadowing DevOps SME</span></p>
+                <p class="description"><span class="bullet">&bull; Created high-impact technical docs—APIs, ERDs, test
+                    cases—that improved onboarding and cross-team collaboration</span></p>
+                <p class="description"><span class="bullet">&bull; Onboarded the highest number of partner integrations
+                    during tenure while owning 7-8 concurrent projects,
+                    outperforming previous TPMs within the team</span></p>
+                <p class="description"><span class="bullet">&bull; Secured a startup ad-tech position via Media Corp.
+                    referrals, recognized for high-impact contributions in the 2018
+                    technical product management apprenticeship program</span></p>
+              </div>
+            </div>
+            <!--EDUCATION-->
+            <h3 class="my-3">Education</h3>
             <div class="resume-item ps-4 pb-4 position-relative">
-              <h4 class="mb-2">Senior graphic design specialist</h4>
-              <h5 class="py-1 px-2 mb-2">2019 - Present</h5>
-              <p><em>Experion, New York, NY</em></p>
-              <p class="description"><span class="bullet">&bull; Lead in the design, development, and implementation of
-                  materials</span></p>
-              <p class="description"><span class="bullet">&bull; Delegate tasks to the 7 members of the design
-                  team</span></p>
-              <p class="description"><span class="bullet">&bull; Supervise the assessment of all graphic
-                  materials</span></p>
-              <p class="description"><span class="bullet">&bull; Oversee budgets ranging from $2,000 - $25,000</span>
-              </p>
+              <h4 class="mb-2">Master of Arts in Science Writing</h4>
+              <h5 class="py-1 px-2 mb-2">2025 - 2027</h5>
+              <p><em>Johns Hopkins University, Baltimore, MD (Remote)</em></p>
+              <p class="description"><span class="bullet">&bull; In progress (4.0 GPA)</span></p>
             </div>
 
             <div class="resume-item ps-4 position-relative">
-              <h4 class="mb-2">Graphic design specialist</h4>
-              <h5 class="py-1 px-2 mb-2">2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <p class="description"><span class="bullet">&bull; Developed numerous marketing programs (logos,
-                  brochures,
-                  infographics...)</span></p>
-              <p class="description"><span class="bullet">&bull; Managed up to 5 projects or tasks under pressure</span>
-              </p>
-              <p class="description"><span class="bullet">&bull; Recommended and consulted with clients</span></p>
-              <p class="description"><span class="bullet">&bull; Created 4+ design presentations and proposals per
-                  month</span></p>
+              <h4 class="mb-2">Bachelor of Science in Electronics Engineering Technology (ABET-Accredited)</h4>
+              <h5 class="py-1 px-2 mb-2">2015 - 2018</h5>
+              <p><em>North Carolina A&amp;T State University, Greensboro, NC</em></p>
+              <!--<p class="description"><span class="bullet">&bull; Quia nobis sequi est occaecati aut. Repudiandae et
+                  iusto quae
+                  reiciendis...</span></p> -->
             </div>
           </div>
         </div>
@@ -552,51 +616,52 @@
       <!-- Contact Container -->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
- <div class="row justify-content-center">
-      <div class="col-lg-6">
+        <div class="row justify-content-center">
+          <div class="col-lg-6">
 
-<!-- Contact Form -->
-<form action="https://formspree.io/f/mldpgwjj" method="POST" class="contact-form">
-  <div class="row gy-4">
+            <!-- Contact Form -->
+            <form action="https://formspree.io/f/mldpgwjj" method="POST" class="contact-form">
+              <div class="row gy-4">
 
-    <!-- Name -->
-    <div class="col-md-6">
-      <input type="text" name="name" class="form-control" placeholder="Your Name" required>
-    </div>
+                <!-- Name -->
+                <div class="col-md-6">
+                  <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+                </div>
 
-    <!-- Email -->
-    <div class="col-md-6">
-      <input type="email" name="email" class="form-control" placeholder="Your Email" required>
-    </div>
+                <!-- Email -->
+                <div class="col-md-6">
+                  <input type="email" name="email" class="form-control" placeholder="Your Email" required>
+                </div>
 
-    <!-- Subject -->
-    <div class="col-md-12">
-      <input type="text" name="subject" class="form-control" placeholder="Subject" required>
-    </div>
+                <!-- Subject -->
+                <div class="col-md-12">
+                  <input type="text" name="subject" class="form-control" placeholder="Subject" required>
+                </div>
 
-    <!-- Message -->
-    <div class="col-md-12">
-      <textarea name="message" class="form-control" rows="6" placeholder="Message" required></textarea>
-    </div>
+                <!-- Message -->
+                <div class="col-md-12">
+                  <textarea name="message" class="form-control" rows="6" placeholder="Message" required></textarea>
+                </div>
 
-    <!-- Status Messages -->
-    <div class="col-md-12 text-center">
-      <div class="loading" style="display:none;">Loading...</div>
-      <div class="error-message" style="display:none; color:#ff4d4d;"></div>
-      <div class="sent-message" style="display:none; color:#39ff14;">Your message has been sent. Thank you!</div>
-      <button type="submit" class="btn btn-neon btn-lg">Send Message</button>
-    </div>
+                <!-- Status Messages -->
+                <div class="col-md-12 text-center">
+                  <div class="loading" style="display:none;">Loading...</div>
+                  <div class="error-message" style="display:none; color:#ff4d4d;"></div>
+                  <div class="sent-message" style="display:none; color:#39ff14;">Your message has been sent. Thank you!
+                  </div>
+                  <button type="submit" class="btn btn-neon btn-lg">Send Message</button>
+                </div>
 
-  </div>
-</form>
+              </div>
+            </form>
 
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</section>  
-</main>
+    </section>
+  </main>
 
-<!-- Footer -->
+  <!-- Footer -->
   <footer id="footer" class="footer" style="background:url('assets/img/cyberpunk-footer.jpg') no-repeat center center / cover !important;
                background-size:cover;">
     <div class="container">
@@ -644,47 +709,47 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
-<!-- Contact Section JS Script -->
-<script>
-  const form = document.getElementById('contact-form');
-  const loading = form.querySelector('.loading');
-  const errorMessage = form.querySelector('.error-message');
-  const sentMessage = form.querySelector('.sent-message');
+  <!-- Contact Section JS Script -->
+  <script>
+    const form = document.getElementById('contact-form');
+    const loading = form.querySelector('.loading');
+    const errorMessage = form.querySelector('.error-message');
+    const sentMessage = form.querySelector('.sent-message');
 
-  form.addEventListener('submit', async function (e) {
-    e.preventDefault(); // stop the redirect
-    loading.style.display = 'block';
-    errorMessage.style.display = 'none';
-    sentMessage.style.display = 'none';
+    form.addEventListener('submit', async function (e) {
+      e.preventDefault(); // stop the redirect
+      loading.style.display = 'block';
+      errorMessage.style.display = 'none';
+      sentMessage.style.display = 'none';
 
-    try {
-      const response = await fetch(form.action, {
-        method: 'POST',
-        body: new FormData(form),
-        headers: { 'Accept': 'application/json' }
-      });
+      try {
+        const response = await fetch(form.action, {
+          method: 'POST',
+          body: new FormData(form),
+          headers: { 'Accept': 'application/json' }
+        });
 
-      loading.style.display = 'none';
+        loading.style.display = 'none';
 
-      if (response.ok) {
-        sentMessage.style.display = 'block';
-        form.reset();
-      } else {
-        const data = await response.json();
-        if (data.errors) {
-          errorMessage.textContent = data.errors.map(err => err.message).join(', ');
+        if (response.ok) {
+          sentMessage.style.display = 'block';
+          form.reset();
         } else {
-          errorMessage.textContent = "Oops! There was a problem submitting your form.";
+          const data = await response.json();
+          if (data.errors) {
+            errorMessage.textContent = data.errors.map(err => err.message).join(', ');
+          } else {
+            errorMessage.textContent = "Oops! There was a problem submitting your form.";
+          }
+          errorMessage.style.display = 'block';
         }
+      } catch (error) {
+        loading.style.display = 'none';
+        errorMessage.textContent = "Network error — please try again later.";
         errorMessage.style.display = 'block';
       }
-    } catch (error) {
-      loading.style.display = 'none';
-      errorMessage.textContent = "Network error — please try again later.";
-      errorMessage.style.display = 'block';
-    }
-  });
-</script>
+    });
+  </script>
 
 </body>
 
