--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <!-- SUMMARY -->
       <div class="container neon-paragraph" data-aos="fade-up" data-aos-delay="100">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6"><!--LEFT COLUMN-->
             <h3 class="my-3">Summary</h3>
             <div class="resume-item ps-4 position-relative">
               <h4 class="mb-2">Sasha Cheek</h4>
@@ -201,125 +201,101 @@
                   communication. Seeking freelance writer opportunities to translate engineering concepts for general
                   audiences.
                 </em>
-              </p><!--Additional info (email address, location, etc.)-->
-              <!--<p class="description"><span class="bullet">&bull; Portland par 127, Orlando, FL</span></p>
-              <p class="description"><span class="bullet">&bull; +(123) 456-7891</span></p>
-              <p class="description"><span class="bullet">&bull; alice.barkley@example.com</span></p> -->
-              <!--</div> -->
-              <!--EDUCATION-->
-              <!--<h3 class="my-3">Education</h3>
-            <div class="resume-item ps-4 pb-4 position-relative">
-              <h4 class="mb-2">Master of Arts in Science Writing</h4>
-              <h5 class="py-1 px-2 mb-2">2025 - 2027</h5>
-              <p><em>Johns Hopkins University, Baltimore, MD (Remote)</em></p>
-              <p class="description"><span class="bullet">&bull; In progress (4.0 GPA)</span></p>
-            </div>-->
-
-              <!--<div class="resume-item ps-4 position-relative">
-              <h4 class="mb-2">Bachelor of Science in Electronics Engineering Technology (ABET-Accredited)</h4>
-              <h5 class="py-1 px-2 mb-2">2015 - 2018</h5>
-              <p><em>North Carolina A&amp;T State University, Greensboro, NC</em></p>
-              <p class="description"><span class="bullet">&bull; Quia nobis sequi est occaecati aut. Repudiandae et
-                  iusto quae
-                  reiciendis...</span></p> -->
-              <!--</div> -->
+              </p>
             </div>
-            <!--EXPERIENCE-->
-            <div class="col-lg-6">
-              <h3 class="my-3">Experience</h3>
-              <div class="resume-item ps-4 pb-4 position-relative">
-                <h4 class="mb-2">Technical Integrations Specialist</h4>
-                <h5 class="py-1 px-2 mb-2">2023 - Present</h5>
-                <p><em>Indeed.com, Research Triangle Park, NC (Remote)</em></p>
-                <p class="description"><span class="bullet">&bull; Manage Integraton Lifecycle Management (ILM) for high
-                    spending partners' integrations, including configuration, testing, deployment, monitoring, and
-                    version
-                    control</span></p>
-                <p class="description"><span class="bullet">&bull; Recognized as trusted subject matter expert (SME) on
-                    API and data feed integrations, advising cross-functional teams on best practices for scalable
-                    system
-                    architecture and design
-                    materials</span></p>
-                <p class="description"><span class="bullet">&bull; Led cross-functional investigation in July 2025 to
-                    mitigate 3rd party partner application programming interface (API) abuse patterns, and proposed
-                    a data pipeline solution to centralize and improve all company API observability</span></p>
-                <p class="description"><span class="bullet">&bull; Engineered and launched 20+ complex API and XML feed
-                    integrations from 2023 to the present day</span></p>
-              </div>
-
-              <div class="resume-item ps-4 position-relative">
-                <h4 class="mb-2">Freelance Science Writer</h4>
-                <h5 class="py-1 px-2 mb-2">2024 - Present</h5>
-                <p><em>Independent, Research Triangle Park, NC</em></p>
-                <p class="description"><span class="bullet">&bull; Interviewed leading experts, including two particle
-                    physicists and the Harvard director of neurology, to produce
-                    authoritative science articles about cosmic radiation impact on astronauts and brain-computer
-                    interfaces (BCIs)
-                  </span></p>
-                <p class="description"><span class="bullet">&bull; Created a website using Bootstrap, JavaScript, HTML,
-                    CSS, and Git to advertise writing and technical portfolios of work</span>
-                </p>
-                <p class="description"><span class="bullet">&bull; Recommended and consulted with clients</span></p>
-                <p class="description"><span class="bullet">&bull; Conducted research using methods such as sourcing
-                    peer-reviewed scientific journals and media, interviewing SMEs,
-                    and fact-checking to ensure the validity of info before publishing stories</span></p>
-              </div>
-
-              <div class="resume-item ps-4 position-relative">
-                <h4 class="mb-2">Technical Program Manager</h4>
-                <h5 class="py-1 px-2 mb-2">2019 - 2022</h5>
-                <p><em>Various Projects, Research Triangle Park, NC (Remote) </em></p>
-                <p class="description"><span class="bullet">&bull; Led migration for 3500+ CDN (content delivery
-                    network)
-                    pages, and made Microsoft products more accessible
-                    to end-users for online orders using Akamai software</span></p>
-                <p class="description"><span class="bullet">&bull; Communicated technical CDN workflows to global
-                    stakeholders via automated dashboards (Power BI/Azure
-                    DevOps), reducing misalignment by 30%</span></p>
-                <p class="description"><span class="bullet">&bull; Onboarded the highest number of partner integrations
-                    during tenure while owning 7-8 concurrent projects,
-                    outperforming previous TPMs within the team</span></p>
-                <p class="description"><span class="bullet">&bull; Trained new program managers and engineers on the
-                    team
-                    for API integrations and processes</span></p>
-              </div>
-
-              <div class="resume-item ps-4 position-relative">
-                <h4 class="mb-2">Technical Business Analyst</h4>
-                <h5 class="py-1 px-2 mb-2">2019 - 2021</h5>
-                <p><em>Hudson MX, Atlanta, GA </em></p>
-                <p class="description"><span class="bullet">&bull; Led API gateway and credential management to
-                    streamline
-                    secure partner integrations while shadowing DevOps SME</span></p>
-                <p class="description"><span class="bullet">&bull; Created high-impact technical docs—APIs, ERDs, test
-                    cases—that improved onboarding and cross-team collaboration</span></p>
-                <p class="description"><span class="bullet">&bull; Onboarded the highest number of partner integrations
-                    during tenure while owning 7-8 concurrent projects,
-                    outperforming previous TPMs within the team</span></p>
-                <p class="description"><span class="bullet">&bull; Secured a startup ad-tech position via Media Corp.
-                    referrals, recognized for high-impact contributions in the 2018
-                    technical product management apprenticeship program</span></p>
-              </div>
-            </div>
-            <!--EDUCATION-->
-            <h3 class="my-3">Education</h3>
+          </div><!--/LEFT COLUMN-->
+          <!--EXPERIENCE-->
+          <div class="col-lg-6"><!--RIGHT COLUMN-->
+            <h3 class="my-3">Experience</h3>
             <div class="resume-item ps-4 pb-4 position-relative">
-              <h4 class="mb-2">Master of Arts in Science Writing</h4>
-              <h5 class="py-1 px-2 mb-2">2025 - 2027</h5>
-              <p><em>Johns Hopkins University, Baltimore, MD (Remote)</em></p>
-              <p class="description"><span class="bullet">&bull; In progress (4.0 GPA)</span></p>
+              <h4 class="mb-2">Technical Integrations Specialist</h4>
+              <h5 class="py-1 px-2 mb-2">2023 - Present</h5>
+              <p><em>Indeed.com, Research Triangle Park, NC (Remote)</em></p>
+              <p class="description"><span class="bullet">&bull; Manage Integraton Lifecycle Management (ILM) for high
+                  spending partners' integrations, including configuration, testing, deployment, monitoring, and
+                  version
+                  control</span></p>
+              <p class="description"><span class="bullet">&bull; Recognized as trusted subject matter expert (SME) on
+                  API and data feed integrations, advising cross-functional teams on best practices for scalable
+                  system
+                  architecture and design
+                  materials</span></p>
+              <p class="description"><span class="bullet">&bull; Led cross-functional investigation in July 2025 to
+                  mitigate 3rd party partner application programming interface (API) abuse patterns, and proposed
+                  a data pipeline solution to centralize and improve all company API observability</span></p>
+              <p class="description"><span class="bullet">&bull; Engineered and launched 20+ complex API and XML feed
+                  integrations from 2023 to the present day</span></p>
             </div>
 
             <div class="resume-item ps-4 position-relative">
-              <h4 class="mb-2">Bachelor of Science in Electronics Engineering Technology (ABET-Accredited)</h4>
-              <h5 class="py-1 px-2 mb-2">2015 - 2018</h5>
-              <p><em>North Carolina A&amp;T State University, Greensboro, NC</em></p>
-              <!--<p class="description"><span class="bullet">&bull; Quia nobis sequi est occaecati aut. Repudiandae et
-                  iusto quae
-                  reiciendis...</span></p> -->
+              <h4 class="mb-2">Freelance Science Writer</h4>
+              <h5 class="py-1 px-2 mb-2">2024 - Present</h5>
+              <p><em>Independent, Research Triangle Park, NC</em></p>
+              <p class="description"><span class="bullet">&bull; Interviewed leading experts, including two particle
+                  physicists and the Harvard director of neurology, to produce
+                  authoritative science articles about cosmic radiation impact on astronauts and brain-computer
+                  interfaces (BCIs)
+                </span></p>
+              <p class="description"><span class="bullet">&bull; Created a website using Bootstrap, JavaScript, HTML,
+                  CSS, and Git to advertise writing and technical portfolios of work</span>
+              </p>
+              <p class="description"><span class="bullet">&bull; Recommended and consulted with clients</span></p>
+              <p class="description"><span class="bullet">&bull; Conducted research using methods such as sourcing
+                  peer-reviewed scientific journals and media, interviewing SMEs,
+                  and fact-checking to ensure the validity of info before publishing stories</span></p>
+            </div>
+
+            <div class="resume-item ps-4 position-relative">
+              <h4 class="mb-2">Technical Program Manager</h4>
+              <h5 class="py-1 px-2 mb-2">2019 - 2022</h5>
+              <p><em>Various Projects, Research Triangle Park, NC (Remote) </em></p>
+              <p class="description"><span class="bullet">&bull; Led migration for 3500+ content delivery
+                  network (CDN) pages, and made Microsoft products more accessible
+                  to end-users for online orders using Akamai software</span></p>
+              <p class="description"><span class="bullet">&bull; Communicated technical CDN workflows to global
+                  stakeholders via automated dashboards (Power BI/Azure
+                  DevOps), reducing misalignment by 30%</span></p>
+              <p class="description"><span class="bullet">&bull; Onboarded the highest number of partner integrations
+                  during tenure while owning 7-8 concurrent projects,
+                  outperforming previous TPMs within the team</span></p>
+              <p class="description"><span class="bullet">&bull; Trained new program managers and engineers on the
+                  team
+                  for API integrations and processes</span></p>
+            </div>
+
+            <div class="resume-item ps-4 position-relative">
+              <h4 class="mb-2">Technical Business Analyst</h4>
+              <h5 class="py-1 px-2 mb-2">2019 - 2021</h5>
+              <p><em>Hudson MX, Atlanta, GA </em></p>
+              <p class="description"><span class="bullet">&bull; Led API gateway and credential management to
+                  streamline
+                  secure partner integrations while shadowing DevOps SME</span></p>
+              <p class="description"><span class="bullet">&bull; Created high-impact technical docs—APIs, ERDs, test
+                  cases—that improved onboarding and cross-team collaboration</span></p>
+              <p class="description"><span class="bullet">&bull; Onboarded the highest number of partner integrations
+                  during tenure while owning 7-8 concurrent projects,
+                  outperforming previous TPMs within the team</span></p>
+              <p class="description"><span class="bullet">&bull; Secured a startup ad-tech position via Media Corp.
+                  referrals, recognized for high-impact contributions in the 2018
+                  technical product management apprenticeship program</span></p>
             </div>
           </div>
+          <!--EDUCATION-->
+          <h3 class="my-3">Education</h3>
+          <div class="resume-item ps-4 pb-4 position-relative">
+            <h4 class="mb-2">Master of Arts in Science Writing</h4>
+            <h5 class="py-1 px-2 mb-2">2025 - 2027</h5>
+            <p><em>Johns Hopkins University, Baltimore, MD (Remote)</em></p>
+            <p class="description"><span class="bullet">&bull; In progress (4.0 GPA)</span></p>
+          </div>
+
+          <div class="resume-item ps-4 position-relative">
+            <h4 class="mb-2">Bachelor of Science in Electronics Engineering Technology (ABET-Accredited)</h4>
+            <h5 class="py-1 px-2 mb-2">2015 - 2018</h5>
+            <p><em>North Carolina A&amp;T State University, Greensboro, NC</em></p>
+          </div>
         </div>
+      </div><!--End Row -->
     </section>
     <!-- /Resume Section -->
 
